[package]
name = "zeus"
version = "0.1.0"
authors = ["liurenjie1024 <liurenjie2008@gmail.com>"]

[dependencies]
grpcio = "0.2.0"
protobuf="1.4"
log = "0.4.1"
futures = "0.1"
quick-error="1.2.1"
log4rs="0.8.0"
prometheus = "0.3.12"
serde="1.0.27"
serde_derive="1.0.27"
serde_json="1.0.9"
bytes="0.4.6"

[lib]
name="zeus"

[[bin]]
name="zeus-server"