[package]
name = "zeus"
version = "0.1.0"
authors = ["liurenjie1024 <liurenjie2008@gmail.com>"]

[dependencies]
grpcio = "0.2.0"
protobuf="1.7.3"
log = "0.4.1"
futures = "0.1"
futures-cpupool = "0.1.8"
log4rs="0.8.0"
prometheus = "0.3.12"
serde="1.0.27"
serde_derive="1.0.27"
serde_json="1.0.9"
bytes="0.4.6"
toml="0.4.5"
clap = "2.31"
error-chain = "0.11.0"
arrow = "0.1.0"
byteorder = "1.2.1"

[lib]
name="zeus"

[[bin]]
name="zeus-server"
